crates/ars-components/src/input/password_input/snapshots/ars_components__input__password_input__tests__password_input_input_masked_snapshot.snap
---
source: crates/ars-components/src/input/password_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "password-input",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "pwd-label",
            ),
        ),
        (
            Id,
            String(
                "pwd-input",
            ),
        ),
        (
            AutoComplete,
            String(
                "current-password",
            ),
        ),
        (
            Type,
            String(
                "password",
            ),
        ),
        (
            Value,
            String(
                "hunter2",
            ),
        ),
    ],
    styles: [],
}
