crates/ars-components/src/input/password_input/snapshots/ars_components__input__password_input__tests__password_input_input_with_metadata_snapshot.snap
---
source: crates/ars-components/src/input/password_input/mod.rs
expression: snapshot_attrs(&api.input_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "password-input",
            ),
        ),
        (
            Aria(
                ErrorMessage,
            ),
            String(
                "pwd-error-message",
            ),
        ),
        (
            Aria(
                Invalid,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "pwd-label",
            ),
        ),
        (
            Aria(
                Required,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                DescribedBy,
            ),
            String(
                "pwd-error-message",
            ),
        ),
        (
            Id,
            String(
                "pwd-input",
            ),
        ),
        (
            AutoComplete,
            String(
                "new-password",
            ),
        ),
        (
            Form,
            String(
                "login",
            ),
        ),
        (
            Name,
            String(
                "password",
            ),
        ),
        (
            Placeholder,
            String(
                "Password",
            ),
        ),
        (
            Required,
            Bool(
                true,
            ),
        ),
        (
            Type,
            String(
                "password",
            ),
        ),
        (
            Value,
            String(
                "seed",
            ),
        ),
    ],
    styles: [],
}
