crates/ars-components/src/input/password_input/snapshots/ars_components__input__password_input__tests__password_input_root_visible_snapshot.snap
---
source: crates/ars-components/src/input/password_input/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "password-input",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "visible",
            ),
        ),
        (
            Id,
            String(
                "pwd",
            ),
        ),
    ],
    styles: [],
}
