crates/ars-components/src/input/password_input/snapshots/ars_components__input__password_input__tests__password_input_toggle_masked_snapshot.snap
---
source: crates/ars-components/src/input/password_input/mod.rs
expression: snapshot_attrs(&api.toggle_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "toggle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "password-input",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Show password",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Type,
            String(
                "button",
            ),
        ),
    ],
    styles: [],
}
